--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <span>Fammi Scoprire il Libano</span>
     </div>
 
-    <h1>Coming Soon</h1>
+    <h1>Coming Soon!</h1>
 
     <!-- ITALIAN -->
     <div class="lang-block">
@@ -140,3 +140,4 @@
 
 </body>
 </html>
+
