--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="coming-box">
 
     <div class="logo">
-      <img src="assets/img/logo/logo.png" alt="Fammi Scoprire il Libano">
+      <img src="assets/img/logo/logo_png.png" alt="Fammi Scoprire il Libano">
       <span>Fammi Scoprire il Libano</span>
     </div>
 
@@ -140,4 +140,5 @@
 
 </body>
 </html>
+
 
