--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           rgba(244,241,236,0.96),
           rgba(244,241,236,0.85)
         ),
-        url("assets/img/hero/byblos.jpg");
+        url("assets/img/hero/10.png");
       background-size: cover;
       background-position: center;
       display: flex;
@@ -140,5 +140,6 @@
 
 </body>
 </html>
+
 
 
