--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     }
 
     .coming-box {
-      background: white;
+      background: var(--green-dark);
+      color: white;
       padding: 48px 36px;
       border-radius: 26px;
       max-width: 560px;
@@ -140,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
