--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     h1 {
       font-family: 'Merriweather', serif;
       font-size: 34px;
-      color: var(--green-dark);
+      color: white;
       margin-bottom: 16px;
     }
 
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
