--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     .lang-block h2 {
       font-size: 20px;
       margin-bottom: 8px;
-      color: var(--green-primary);
+      color: var(--sand);
     }
 
     p {
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
