--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
     .lang-block {
       margin-bottom: 24px;
+      color: var(--sand);
     }
 
     .lang-block h2 {
@@ -141,6 +142,7 @@
 
 </body>
 </html>
+
 
 
 
