--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
       margin-bottom: 24px;
     }
 
-    .lang-block h2 {
-      font-size: 20px;
-      margin-bottom: 8px;
+    .lang-block p {
       color: var(--sand);
     }
 
@@ -141,6 +139,7 @@
 
 </body>
 </html>
+
 
 
 
