--- a/Website/index.html
+++ b/Website/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Merriweather:wght@700&display=swap" rel="stylesheet">
   
 
-  <link rel="stylesheet" href="C:/TEMP/Website/assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
