burger menu update

--- a/Website/index.html
+++ b/Website/index.html
@@ -22,6 +22,13 @@
       <img src="assets/img/logo/Logo_png.png" alt="Fammi Scoprire il Libano logo">
       <span>Fammi Scoprire il Libano</span>
     </a>
+	
+	<!-- BURGER BUTTON (mobile only) -->
+	<button class="burger" aria-label="Menu">
+	  <span></span>
+	  <span></span>
+	  <span></span>
+	</button>
 
     <!-- CENTER: MENU -->
     <nav class="nav">
@@ -172,6 +179,8 @@
 </footer>
 
 <script src="assets/js/hero-carousel.js"></script>
+<script src="assets/js/menu.js"></script>
+
 
 </body>
 </html>
